# sdk-rpc

./: CMakeLists.txt  LICENSE  READM.md  README.md  make.bat
JNI_CPP/: CMakeLists.txt
JNI_CPP/JNI/: jni_tools.cpp  jni_tools.h  src_envelop_Envelop.cpp  src_envelop_Envelop.h  src_sig_sig.cpp  src_sig_sig.h
JNI_CPP/envelop/: base64.cpp  base64.h  ripemd160.cpp  tx.cpp  util2.cpp  util2.h
JNI_CPP/lib/include/crypto/: bn_conf.h  dso_conf.h
JNI_CPP/lib/include/google/protobuf/: any_test.pb.h  unittest.pb.h  unittest_embed_optimize_for.pb.h  unittest_empty.pb.h  unittest_import.pb.h  unittest_import_public.pb.h  unittest_lazy_dependencies.pb.h  unittest_lite.pb.h  unittest_mset.pb.h  unittest_no_field_presence.pb.h  unittest_preserve_unknown_enum.pb.h  unittest_preserve_unknown_enum2.pb.h  unittest_proto3.pb.h  unittest_proto3_arena_lite.pb.h
JNI_CPP/lib/include/google/protobuf/util/: json_format.pb.h  message_differencer_unittest.pb.h
JNI_CPP/lib/include/google/protobuf/util/internal/testdata/: books.pb.h  proto3.pb.h  wrappers.pb.h
JNI_CPP/lib/include/openssl/: bio.h  configuration.h  opensslv.h
JNI_CPP/sig/: sig.cpp  sig.h
JNI_JAVA/: make.bat  run.bat  src_sig_sig.h
JNI_JAVA/src/envelop/: Envelop.java
JNI_JAVA/src/sig/: sig.java
JNI_JAVA/src/test/: testMain.java
JNI_JAVA/src/test/contract/: abi.json  contract  metadata.json  source.sol  userdoc.json
JNI_JAVA/src/tx/: Tx.java
api/: interface.cpp  interface.h
envelop/: Envelop.cpp  RSA_TEXT.cpp  RSA_TEXT.h  base58.cpp  base58.h  base64.cpp  base64.h  bip39.cpp  debug.h  hexcode.cpp  hexcode.h  pbkdf2.cpp  ptrcomponent.h  tx.cpp  tx.h
evmone/: evmc.cpp  evmc.h  evmc.hpp
go_test/: go.mod  main.go
go_test/contract/: devdoc.json  otherdata.json  srcmap.txt  srcmap_runtime.txt
go_test/lib/: go_interface.h
go_test/tx/: tx_func_package.go
linux/rpc_lib/: CMakeLists.txt  compile_commands.json  dep.sh
linux/rpc_lib/api/: interface.cpp  interface.h
linux/rpc_lib/envelop/: base64.cpp  debug.h  pbkdf2.h  ptrcomponent.cpp  tx.h
linux/rpc_lib/sig/: sig.cpp
sig/: Mac.h  sig.cpp  sig.h  sigTx.cpp  sigTx.h
test/: contract.txt  main.cpp
windows/rpc_lib/: CMakeLists.txt  compile_commands.json
windows/rpc_lib/api/: interface.cpp  interface.h
windows/rpc_lib/envelop/: Envelop.cpp  Envelop.h  RSA_TEXT.cpp  base64.cpp  hmac.cpp  ptrcomponent.h  sha2.cpp
windows/rpc_lib/lib/include/google/protobuf/: map_lite_unittest.pb.h  map_proto2_unittest.pb.h  map_unittest.pb.h  unittest_arena.pb.h  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.h  unittest_import_lite.pb.h  unittest_import_public_lite.pb.h  unittest_lazy_dependencies_custom_option.pb.h  unittest_lazy_dependencies_enum.pb.h  unittest_lite_imports_nonlite.pb.h  unittest_mset_wire_format.pb.h  unittest_no_generic_services.pb.h  unittest_optimize_for.pb.h  unittest_proto3_arena.pb.h  unittest_proto3_lite.pb.h  unittest_proto3_optional.pb.h  unittest_well_known_types.pb.h
windows/rpc_lib/lib/include/google/protobuf/compiler/cpp/: test_bad_identifiers.pb.h  test_large_enum_value.pb.h
windows/rpc_lib/lib/include/google/protobuf/util/: json_format_proto3.pb.h
windows/rpc_lib/lib/include/google/protobuf/util/internal/: protostream_objectwriter_test.cc
windows/rpc_lib/lib/include/google/protobuf/util/internal/testdata/: anys.pb.h  default_value.pb.h  default_value_test.pb.h  field_mask.pb.h  maps.pb.h  oneofs.pb.h  struct.pb.h  timestamp_duration.pb.h
windows/rpc_lib/sig/: sig.cpp  sig.h  sigTx.cpp
